k8s/Artifact to GKE/extras/yeson8-cdrm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yeson8-cdrm-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: cdrm.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yeson8-cdrm-service
                port:
                  number: 80
